@@ -629,11 +629,13 @@ if not _exists("urandom"):
         return bs
 
 # Supply os.popen()
-def popen(cmd, mode="r", buffering=None):
+def popen(cmd, mode="r", buffering=-1):
     if not isinstance(cmd, str):
         raise TypeError("invalid cmd type (%s, expected string)" % type(cmd))
     if mode not in ("r", "w"):
         raise ValueError("invalid mode %r" % mode)
+    if buffering == 0 or buffering == None:
+        raise ValueError("popen() does not support unbuffered streams")
     import subprocess, io
     if mode == "r":
         proc = subprocess.Popen(cmd,
